# mle-train

./: .gitignore  README.md  env.yml  nonstandardcode.py  settings.json
.ipynb_checkpoints/: nonstandardcode-checkpoint.ipynb
mle_3_module/: env_new.yml  housing_docker_session  my_docker_session  pyproject.toml  settings.json  setup.py  setup.py.save
mle_3_module/docs/: conf.py  modules.rst
mle_3_module/docs/_build/doctrees/: environment.pickle  housing_pkg.doctree  index.doctree  modules.doctree
mle_3_module/docs/_build/html/: .buildinfo  genindex.html  housing_pkg.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
mle_3_module/docs/_build/html/_sources/: housing_pkg.rst.txt  index.rst.txt
mle_3_module/src/housing_pkg/: ingest_data.py  pipeline.py
mle_3_module/src/ramakrishna_j_package/: __init__.py  score.py  train.py
mle_3_module/src/ramakrishna_j_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
